# PD2-conducIA

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
despliegue/: documentacion.html  index.html  main.py  preparar_contexto_web.py  taxi.html  verificar_contexto_web.py  vtc.html
despliegue/modelos_finales/: modelo_p2_mlp.keras  modelo_p2_mlp_metadata.json  modelo_p2_mlp_scaler.pkl  modelo_p2_zona_encoder.pkl  modelo_p4_embeddings.keras  modelo_p4_red_neuronal.keras  modelo_p4_red_neuronal_metadata.json  modelo_p4_scaler_clima.joblib  modelo_p5_xgboost.joblib
despliegue/reentrenar/: reentrenar_mlp.py  reentrenar_red_p4.py  reentrenar_rf_p1.py  reentrenar_xgb_p5.py
despliegue/templates/: documentacion.html  funcionalidades.html  index.html  taxi.html  vtc.html
docs/: contexto_web.md  datos.md  estudio_mercado.md  funcionalidad_demanda_zonas.md  resumen_problema1_problema2.md
docs/memory/: entrega1.html  index.html  style.css
src/: config.py  procesado_datos.py
src/analysis/: 1_data_analysis.ipynb  2_year_analysis.ipynb  data_analysis.ipynb  variable_analysis.ipynb
src/funcionalidades/: __init__.py  demanda_zona_franja.py  mapa_coropletico.py
src/io/: download_events.py  download_holidays.py  download_tlc.py  weather.py
src/modelos/: analisis_significancia
src/modelos/p2/: baseline.py  comparar_modelos.py  gnn.py  lightgbm.py  mlp.py  preparar_datos.py
src/pipelines/: run_pipeline.py
src/processing/: clean_tlc.py  columnas.py  enrich_tlc.py  prepare_model_dataset.py  schema.py  stats.py
(+46 files in other folders)
