[project]
name = "pd2-conducia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cpu]>=0.9.2",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "nbstripout>=0.9.1",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.7.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
